--- a/YT_FE/src/app/admin/components/db-items-list/db-items-list.component.scss
+++ b/YT_FE/src/app/admin/components/db-items-list/db-items-list.component.scss
@@ -38,32 +38,12 @@
       height: 1.5rem;
       margin-left: 1rem;
       margin-right: auto;
-      box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-        0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+      box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
       &:active {
-        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-          0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
       }
     }
-
-    // &-sort {
-    //   width: 3rem;
-    //   height: 24px;
-    //   overflow: visible;
-    //   position: relative;
-    //   margin-left: auto;
-    //   display: flex;
-    //   // justify-content: space-between;
-    //   align-items: center;
-
-    //   span {
-    //     position: absolute;
-    //     top: 0;
-    //     right: 0;
-    //     cursor: pointer;
-    //   }
-    // }
   }
 }
 .list {
