--- a/YT_FE/src/app/shared/components/alphabetical-sort/alphabetical-sort.component.html
+++ b/YT_FE/src/app/shared/components/alphabetical-sort/alphabetical-sort.component.html
@@ -1,8 +1,4 @@
 <div matRipple class="sort">
-  <span #down [@ngIfFade]="down" *ngIf="sort === 'asc'"
-    >A-Z&nbsp;<i class="fas fa-caret-up"></i
-  ></span>
-  <span #up [@ngIfFade]="up" *ngIf="sort === 'desc'"
-    >Z-A&nbsp;<i class="fas fa-caret-down"></i
-  ></span>
+  <span #down [@ngIfFade]="down" *ngIf="sort === 'asc'">A-Z&nbsp;<i class="fas fa-caret-up"></i> </span>
+  <span #up [@ngIfFade]="up" *ngIf="sort === 'desc'">Z-A&nbsp;<i class="fas fa-caret-down"></i></span>
 </div>
