--- a/YT_FE/src/app/admin/components/genres/genres.component.html
+++ b/YT_FE/src/app/admin/components/genres/genres.component.html
@@ -1,10 +1,8 @@
 <div class="tab-content">
-  <yt-db-items-list
-    class="tab-content_list"
-    [title]="'Genres'"
-    [dbItemsCached]="dbItems"
-  >
-  </yt-db-items-list>
+  <div class="tab-content_side">
+    <yt-db-items-list class="tab-content_side-list" [title]="'Genres'" [dbItemsCached]="dbItems">
+    </yt-db-items-list>
+  </div>
   <mat-divider [vertical]="true"></mat-divider>
   <div class="tab-content_actions">
     <form class="form rounded" [formGroup]="genreForm" (ngSubmit)="onSave()">
@@ -15,13 +13,7 @@
       </div>
       <div class="form-group">
         <mat-form-field class="full-width">
-          <input
-            #name
-            matInput
-            type="text"
-            placeholder="Name"
-            formControlName="name"
-          />
+          <input #name matInput type="text" placeholder="Name" formControlName="name" />
           <mat-error *ngIf="genreForm.get('name').hasError('required')">
             Name is <strong>required</strong>
           </mat-error>
@@ -32,23 +24,12 @@
       </div>
 
       <div class="form_buttons">
-        <button
-          type="submit"
-          mat-raised-button
-          color="primary"
-          matTooltip="Click the button to submit the form"
-          [disabled]="genreForm.invalid"
-        >
+        <button type="submit" mat-raised-button color="primary" matTooltip="Click the button to submit the form"
+          [disabled]="genreForm.invalid">
           Save
         </button>
         <div class="margin-left-auto" *ngIf="id.value" #new [@ngIfFade]="new">
-          <button
-            type="button"
-            mat-raised-button
-            color="primary"
-            matTooltip="Add new genre"
-            (click)="onNew()"
-          >
+          <button type="button" mat-raised-button color="primary" matTooltip="Add new genre" (click)="onNew()">
             New
           </button>
         </div>
