--- a/YT_FE/src/assets/scss/_components.scss
+++ b/YT_FE/src/assets/scss/_components.scss
@@ -82,7 +82,23 @@
   display: flex;
   height: 100%;
 
+  &_side{
+    position: relative;
+    height: 100%;
+
+    &-list {
+      height:100%;
+      overflow-x: visible;
+      justify-self: flex-start;
+      display: flex;
+      flex-direction: column;
+  
+      background: rgba(0, 0, 0, 0.03);
+    }
+  }
+
   &_list {
+    height:100%;
     overflow-x: visible;
     justify-self: flex-start;
     display: flex;
